chore: upgrade review script to latest cobrapy version

--- a/ComplementaryScripts/14. Review Stage Corrections.ipynb
+++ b/ComplementaryScripts/14. Review Stage Corrections.ipynb
@@ -13,6 +13,7 @@
    "source": [
     "### Requirements\n",
     "```\n",
+    "python                    3.6\n",
     "cobra                     0.13.4\n",
     "memote                    0.8.6\n",
     "jupyter                   1.0.0\n",
@@ -375,17 +376,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def summary(model, solution):\n",
-    "    metabolites = {m for r in model.exchanges for m in r.metabolites}\n",
+    "    metabolites = {m for r in model.boundary for m in r.metabolites}\n",
     "    index = sorted(metabolites, key=attrgetter('id'))\n",
     "    metabolite_fluxes = pd.DataFrame({'id': [m for m in index],'flux': zeros(len(index), dtype=float)}, index=[m.id for m in index])\n",
-    "    for rxn in model.exchanges:\n",
+    "    for rxn in model.boundary:\n",
     "        for met, stoich in iteritems(rxn.metabolites):\n",
     "            metabolite_fluxes.at[met.id, 'flux'] += stoich * solution[rxn.id]\n",
     "    print (\"IN\")\n",
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -458,22 +459,25 @@
       "cl_e 0.0382\n",
       "cu2_e 0.0003\n",
       "fe2_e 0.0011\n",
-      "h_e 1.4581\n",
+      "h_e 1.4584\n",
       "k_e 0.0314\n",
       "mg2_e 0.022\n",
       "na1_e 0.007\n",
-      "no3_e 1.4586\n",
-      "o2_e 27.8071\n",
-      "pi_e 0.098\n",
+      "no3_e 1.4587\n",
+      "o2_e 27.807\n",
+      "pi_e 0.0981\n",
       "so4_e 0.03\n",
       "zn2_e 0.0002\n",
       "OUT\n",
       "----------\n",
-      "co2_e 12.468\n",
-      "h2o_e 32.9602\n",
+      "co2_e 12.4681\n",
+      "doxopa_c 0.0002\n",
+      "h2o2_c 0.0572\n",
+      "h2o_e 32.9606\n",
+      "rdmbzi_c 0.0002\n",
       "Growth Rate\n",
       "----------\n",
-      "0.1780421174950696\n"
+      "0.17800418171840207\n"
      ]
     }
    ],
@@ -482,6 +486,8 @@
     "\n",
     "with mcaps:\n",
     "    mcaps.reactions.EX_no3_e.bounds = -10, 0\n",
+    "    mcaps.reactions.GLNS.bounds = 0, 1000\n",
+    "    mcaps.reactions.ALAD_L.bounds = 0, 1000\n",
     "    solution = pfba(mcaps)\n",
     "    summary(mcaps, solution)\n",
     "    #visualize_fluxes(mcaps, solution)"
@@ -489,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -498,6 +504,58 @@
      "text": [
       "IN\n",
       "----------\n",
+      "ca2_e 0.0182\n",
+      "ch4_e 18.46\n",
+      "cl_e 0.0558\n",
+      "cu2_e 0.0004\n",
+      "fe2_e 0.0016\n",
+      "k_e 0.0459\n",
+      "mg2_e 0.0321\n",
+      "na1_e 0.0102\n",
+      "nh4_e 2.1328\n",
+      "o2_e 27.861\n",
+      "pi_e 0.1435\n",
+      "so4_e 0.0439\n",
+      "zn2_e 0.0003\n",
+      "OUT\n",
+      "----------\n",
+      "co2_e 9.699\n",
+      "doxopa_c 0.0003\n",
+      "h2o2_c 0.0836\n",
+      "h2o_e 33.2636\n",
+      "h_e 2.1331\n",
+      "rdmbzi_c 0.0003\n",
+      "Growth Rate\n",
+      "----------\n",
+      "0.2602661442087391\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NH4 - Reference\n",
+    "\n",
+    "with mcaps:\n",
+    "    mcaps.reactions.EX_nh4_e.bounds = -10, 0\n",
+    "    mcaps.reactions.EX_no3_e.bounds = 0, 0\n",
+    "    mcaps.reactions.GLNS.bounds = 0, 0\n",
+    "    mcaps.reactions.ALAD_L.bounds = 0, 1000\n",
+    "    solution = pfba(mcaps)\n",
+    "    summary(mcaps, solution)\n",
+    "    #visualize_fluxes(mcaps, solution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IN\n",
+      "----------\n",
+      "ala__L_c 10.0\n",
       "ca2_e 0.0702\n",
       "ch4_e 18.46\n",
       "cl_e 0.2153\n",
@@ -515,11 +573,14 @@
       "OUT\n",
       "----------\n",
       "co2_e 14.6531\n",
+      "doxopa_c 0.0011\n",
+      "h2o2_c 0.3226\n",
       "h2o_e 42.8106\n",
       "nh4_e 1.7701\n",
+      "rdmbzi_c 0.0011\n",
       "Growth Rate\n",
       "----------\n",
-      "1.0043169378267276\n"
+      "1.0043169244497043\n"
      ]
     }
    ],
@@ -583,24 +644,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "There is an `e` compartment but it does not look like it is the actual external compartment.\n",
-      "There is an `e` compartment but it does not look like it is the actual external compartment.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "IN\n",
       "----------\n",
+      "asn__L_c 10.0\n",
       "ca2_e 0.0721\n",
+      "ch4_e 18.46\n",
       "cl_e 0.2212\n",
       "cobalt2_e 0.0001\n",
       "cu2_e 0.0016\n",
@@ -641,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -655,6 +710,8 @@
       "cl_e 0.2141\n",
       "cobalt2_e 0.0001\n",
       "cu2_e 0.0015\n",
+      "cyan_c 9.8314\n",
+      "cys__L_c 10.0\n",
       "fe2_e 0.0061\n",
       "k_e 0.1763\n",
       "mg2_e 0.1233\n",
@@ -665,9 +722,13 @@
       "OUT\n",
       "----------\n",
       "co2_e 14.8397\n",
+      "doxopa_c 0.0011\n",
+      "h2o2_c 0.3209\n",
       "h2o_e 42.7199\n",
       "h_e 8.3542\n",
       "nh4_e 1.8155\n",
+      "rdmbzi_c 0.0011\n",
+      "tcynt_c 9.8314\n",
       "Growth Rate\n",
       "----------\n",
       "0.9987733659763532\n"
@@ -688,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -702,6 +763,7 @@
       "cl_e 0.0998\n",
       "cu2_e 0.0007\n",
       "fe2_e 0.0028\n",
+      "glu__L_c 10.0\n",
       "k_e 0.0822\n",
       "mg2_e 0.0575\n",
       "na1_e 0.0182\n",
@@ -711,10 +773,14 @@
       "zn2_e 0.0005\n",
       "OUT\n",
       "----------\n",
+      "akg_c 9.4291\n",
       "co2_e 5.64\n",
+      "doxopa_c 0.0005\n",
+      "h2o2_c 0.1496\n",
       "h2o_e 32.0909\n",
       "h_e 2.6745\n",
       "nh4_e 6.1843\n",
+      "rdmbzi_c 0.0005\n",
       "Growth Rate\n",
       "----------\n",
       "0.465644740246284\n"
@@ -736,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -750,6 +816,7 @@
       "cl_e 0.0998\n",
       "cu2_e 0.0007\n",
       "fe2_e 0.0028\n",
+      "gln__L_c 10.0\n",
       "k_e 0.0822\n",
       "mg2_e 0.0575\n",
       "na1_e 0.0182\n",
@@ -759,10 +826,14 @@
       "zn2_e 0.0005\n",
       "OUT\n",
       "----------\n",
+      "akg_c 9.4291\n",
       "co2_e 5.64\n",
+      "doxopa_c 0.0005\n",
+      "h2o2_c 0.1496\n",
       "h2o_e 22.0909\n",
       "h_e 2.6745\n",
       "nh4_e 16.1843\n",
+      "rdmbzi_c 0.0005\n",
       "Growth Rate\n",
       "----------\n",
       "0.4656447402462855\n"
@@ -784,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -804,13 +875,18 @@
       "o2_e 27.9897\n",
       "pi_e 0.2515\n",
       "so4_e 0.077\n",
+      "val__L_c 10.0\n",
       "zn2_e 0.0005\n",
       "OUT\n",
       "----------\n",
+      "3mob_c 9.6464\n",
       "co2_e 4.8751\n",
+      "doxopa_c 0.0005\n",
+      "h2o2_c 0.1465\n",
       "h2o_e 31.9269\n",
       "h_e 3.3844\n",
       "nh4_e 6.2625\n",
+      "rdmbzi_c 0.0005\n",
       "Growth Rate\n",
       "----------\n",
       "0.4560979557095218\n"
@@ -913,6 +989,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IN\n",
+      "----------\n",
+      "h2_c 3.7289\n",
+      "o2_e 1.8644\n",
+      "OUT\n",
+      "----------\n",
+      "h2o_e 3.7289\n",
+      "Growth Rate\n",
+      "----------\n",
+      "1.8362663351804603e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "# H2\n",
+    "with mcaps:\n",
+    "    mcaps.reactions.EX_no3_e.bounds = -1000, 1000\n",
+    "    mcaps.reactions.EX_ch4_e.bounds = 0, 0\n",
+    "    mcaps.reactions.SMMOi.bounds = 0, 1000\n",
+    "    mcaps.reactions.GLNS.bounds = 0, 1000\n",
+    "    mcaps.reactions.ALAD_L.bounds = 0, 1000\n",
+    "    mcaps.reactions.EX_co2_e.bounds = 0, 0\n",
+    "    mcaps.reactions.SK_h2_c.bounds = -10, 0\n",
+    "    solution = pfba(mcaps)\n",
+    "    summary(mcaps, solution)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Infeasible",
+     "evalue": "None (infeasible)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInfeasible\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-61-052be83ec457>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEX_co2_e\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m18.46\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSK_h2_c\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0msolution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpfba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmcaps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmcaps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolution\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/envs/efpro2_rev/lib/python3.6/site-packages/cobra/flux_analysis/parsimonious.py\u001b[0m in \u001b[0;36mpfba\u001b[0;34m(model, fraction_of_optimum, objective, reactions)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m         add_pfba(m, objective=objective,\n\u001b[0;32m---> 67\u001b[0;31m                  fraction_of_optimum=fraction_of_optimum)\n\u001b[0m\u001b[1;32m     68\u001b[0m         \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mslim_optimize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0msolution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_solution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreactions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/envs/efpro2_rev/lib/python3.6/site-packages/cobra/flux_analysis/parsimonious.py\u001b[0m in \u001b[0;36madd_pfba\u001b[0;34m(model, objective, fraction_of_optimum)\u001b[0m\n\u001b[1;32m     96\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobjective\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'_pfba_objective'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The model already has a pFBA objective.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m     \u001b[0msutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfix_objective_as_constraint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfraction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfraction_of_optimum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m     reaction_variables = ((rxn.forward_variable, rxn.reverse_variable)\n\u001b[1;32m    100\u001b[0m                           for rxn in model.reactions)\n",
+      "\u001b[0;32m/anaconda/envs/efpro2_rev/lib/python3.6/site-packages/cobra/util/solver.py\u001b[0m in \u001b[0;36mfix_objective_as_constraint\u001b[0;34m(model, fraction, bound, name)\u001b[0m\n\u001b[1;32m    390\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfix_objective_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    391\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mbound\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 392\u001b[0;31m         \u001b[0mbound\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mslim_optimize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mfraction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    393\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobjective\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirection\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'max'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    394\u001b[0m         \u001b[0mub\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbound\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/envs/efpro2_rev/lib/python3.6/site-packages/cobra/core/model.py\u001b[0m in \u001b[0;36mslim_optimize\u001b[0;34m(self, error_value, message)\u001b[0m\n\u001b[1;32m    846\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0merror_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    847\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 848\u001b[0;31m             \u001b[0massert_optimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    849\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    850\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0moptimize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobjective_sense\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mraise_error\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/envs/efpro2_rev/lib/python3.6/site-packages/cobra/util/solver.py\u001b[0m in \u001b[0;36massert_optimal\u001b[0;34m(model, message)\u001b[0m\n\u001b[1;32m    431\u001b[0m         exception_cls = OPTLANG_TO_EXCEPTIONS_DICT.get(\n\u001b[1;32m    432\u001b[0m             status, OptimizationError)\n\u001b[0;32m--> 433\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception_cls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{} ({})\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstatus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mInfeasible\u001b[0m: None (infeasible)"
+     ]
+    }
+   ],
+   "source": [
+    "# CO2\n",
+    "with mcaps:\n",
+    "    mcaps.reactions.EX_no3_e.bounds = -1000, 1000\n",
+    "    mcaps.reactions.EX_ch4_e.bounds = 0, 0\n",
+    "    mcaps.reactions.SMMOi.bounds = 0, 1000\n",
+    "    mcaps.reactions.GLNS.bounds = 0, 1000\n",
+    "    mcaps.reactions.ALAD_L.bounds = 0, 1000\n",
+    "    mcaps.reactions.EX_co2_e.bounds = -18.46, 0\n",
+    "    mcaps.reactions.SK_h2_c.bounds = 0, 0\n",
+    "    solution = pfba(mcaps)\n",
+    "    summary(mcaps, solution)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -975,15 +1125,64 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IN\n",
+      "----------\n",
+      "ca2_e 0.0043\n",
+      "cl_e 0.0131\n",
+      "cu2_e 0.0001\n",
+      "fe2_e 0.0004\n",
+      "for_c 10.0\n",
+      "h_e 10.5021\n",
+      "k_e 0.0108\n",
+      "mg2_e 0.0076\n",
+      "na1_e 0.0024\n",
+      "no3_e 0.5022\n",
+      "o2_e 1.8628\n",
+      "pi_e 0.0338\n",
+      "so4_e 0.0103\n",
+      "zn2_e 0.0001\n",
+      "OUT\n",
+      "----------\n",
+      "co2_c 7.9372\n",
+      "doxopa_c 0.0001\n",
+      "h2o2_c 0.0197\n",
+      "h2o_c 8.637\n",
+      "rdmbzi_c 0.0001\n",
+      "Growth Rate\n",
+      "----------\n",
+      "0.06127911117806891\n"
+     ]
+    }
+   ],
    "source": [
-    "The model predicts growth but here formate is both the energy and carbon source."
+    "# Formate\n",
+    "with mcaps:\n",
+    "    open_bounds()\n",
+    "    mcaps.reactions.EX_no3_e.bounds = -1000, 1000\n",
+    "    mcaps.reactions.EX_ch4_e.bounds = 0, 0\n",
+    "    mcaps.reactions.SMMOi.bounds = 0, 1000\n",
+    "    mcaps.reactions.GLNS.bounds = 0, 1000\n",
+    "    mcaps.reactions.ALAD_L.bounds = 0, 1000\n",
+    "    mcaps.reactions.EX_co2_e.bounds = 0, 0\n",
+    "    mcaps.reactions.SK_for_c.bounds = -10, 0\n",
+    "    solution = pfba(mcaps)\n",
+    "    summary(mcaps, solution)\n",
+    "    \n",
+    "    # visualize_fluxes(mcaps, solution)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -994,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
