add: version review stage corrections

--- a/ComplementaryScripts/14. Review Stage Corrections.ipynb
+++ b/ComplementaryScripts/14. Review Stage Corrections.ipynb
@@ -422,7 +422,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from escher import Builder\n",
@@ -1201,6 +1203,120 @@
    "source": [
     "write_sbml_model(mcaps, '../ModelFiles/xml/iMcBath.xml')\n",
     "save_json_model(mcaps, '../ModelFiles/json/iMcBath.json', pretty=True, sort=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{<Metabolite 2ddg6p_c at 0x113dc0470>: -3e-06,\n",
+       " <Metabolite 2pg_c at 0x113df49b0>: -0.006,\n",
+       " <Metabolite 6pgc_c at 0x113de87b8>: -0.00015,\n",
+       " <Metabolite accoa_c at 0x113e2d550>: -0.0001,\n",
+       " <Metabolite adocbl_c at 0x113dfc588>: -6e-08,\n",
+       " <Metabolite ala__L_c at 0x113e13048>: -0.576,\n",
+       " <Metabolite amet_c at 0x113e13f60>: -0.00022,\n",
+       " <Metabolite arg__L_c at 0x113e5f7f0>: -0.254,\n",
+       " <Metabolite asn__L_c at 0x113e5fe80>: -0.119,\n",
+       " <Metabolite asp__L_c at 0x113e6fc50>: -0.468,\n",
+       " <Metabolite atp_c at 0x113de18d0>: -23.11185589,\n",
+       " <Metabolite ca2_c at 0x113e2ac50>: -0.06986377,\n",
+       " <Metabolite cit_c at 0x113e88a58>: -0.001,\n",
+       " <Metabolite cl_c at 0x113e96390>: -0.21438646,\n",
+       " <Metabolite clpn_MC_c at 0x113e96b00>: -3.15904e-06,\n",
+       " <Metabolite coa_c at 0x113e80208>: -0.00022,\n",
+       " <Metabolite cobalt2_c at 0x113e801d0>: -5.769e-05,\n",
+       " <Metabolite colipa_e at 0x113e65080>: -0.002,\n",
+       " <Metabolite cpoa2h_c at 0x113e657f0>: -0.00186552,\n",
+       " <Metabolite ctp_c at 0x113e8eac8>: -0.04425885,\n",
+       " <Metabolite cu2_c at 0x113e8ed68>: -0.00151072,\n",
+       " <Metabolite cys__L_c at 0x113ea2198>: -0.038,\n",
+       " <Metabolite datp_c at 0x113ead7f0>: -0.00866366,\n",
+       " <Metabolite dctp_c at 0x113ebd2e8>: -0.01571821,\n",
+       " <Metabolite dgtp_c at 0x113ebe2e8>: -0.01446787,\n",
+       " <Metabolite dpterol_c at 0x113ec2390>: -0.01282849,\n",
+       " <Metabolite dttp_c at 0x113eca780>: -0.00882698,\n",
+       " <Metabolite f6p_c at 0x113e7bf98>: -0.003,\n",
+       " <Metabolite fad_c at 0x113eaf208>: -0.00022,\n",
+       " <Metabolite fdp_c at 0x113edf0b8>: -0.001,\n",
+       " <Metabolite fe2_c at 0x113edf7f0>: -0.0059,\n",
+       " <Metabolite fmn_c at 0x113ee7b38>: -0.00022,\n",
+       " <Metabolite fmnh2_c at 0x113ee7cc0>: -0.00022,\n",
+       " <Metabolite fum_c at 0x113ef99b0>: -0.001,\n",
+       " <Metabolite g3p_c at 0x113f014e0>: -0.003,\n",
+       " <Metabolite g6p_c at 0x113f01dd8>: -0.002,\n",
+       " <Metabolite glc__D_c at 0x113ef3e10>: -0.24977798,\n",
+       " <Metabolite gln__L_c at 0x113ef3f60>: -0.15,\n",
+       " <Metabolite glu__L_c at 0x113f0b940>: -0.519,\n",
+       " <Metabolite gly_c at 0x113f15940>: -0.484,\n",
+       " <Metabolite glyc_R_c at 0x113f1da90>: -0.001,\n",
+       " <Metabolite gthrd_c at 0x113f2e4e0>: -0.00022,\n",
+       " <Metabolite gtp_c at 0x113f2e748>: -0.04084668,\n",
+       " <Metabolite h2o_c at 0x113efd860>: -17.77579456,\n",
+       " <Metabolite hdca_c at 0x113f38128>: -0.01558994,\n",
+       " <Metabolite his__L_c at 0x113f3f2e8>: -0.104,\n",
+       " <Metabolite hpdca_c at 0x113f4b3c8>: -0.00179858,\n",
+       " <Metabolite ile__L_c at 0x113f56198>: -0.242,\n",
+       " <Metabolite inost_c at 0x113f376a0>: -0.00016652,\n",
+       " <Metabolite k_c at 0x113f30588>: -0.17647826,\n",
+       " <Metabolite lanost_c at 0x113f4f7f0>: -0.00515564,\n",
+       " <Metabolite leu__L_c at 0x113f4fe10>: -0.415,\n",
+       " <Metabolite lys__L_c at 0x113f6a0f0>: -0.277,\n",
+       " <Metabolite mal__L_c at 0x113f6a6d8>: -0.004,\n",
+       " <Metabolite met__L_c at 0x113f30c18>: -0.13,\n",
+       " <Metabolite mg2_c at 0x113f7ee80>: -0.12343139,\n",
+       " <Metabolite mn2_c at 0x113f6d550>: -1.8e-05,\n",
+       " <Metabolite na1_c at 0x113f83d30>: -0.03914785,\n",
+       " <Metabolite nac_c at 0x113f8b8d0>: -0.00106469,\n",
+       " <Metabolite nad_c at 0x113f8bac8>: -0.002,\n",
+       " <Metabolite nadh_c at 0x113f8bcc0>: -0.002,\n",
+       " <Metabolite nadp_c at 0x113f8bf98>: -0.001,\n",
+       " <Metabolite nadph_c at 0x113f932b0>: -0.001,\n",
+       " <Metabolite ni2_c at 0x113f98198>: -3.4e-05,\n",
+       " <Metabolite ocdca_c at 0x113f316d8>: -8.548e-05,\n",
+       " <Metabolite ocdcea_c at 0x113f31400>: -0.00014349,\n",
+       " <Metabolite pc_MC_c at 0x113fb6470>: -9.37385e-06,\n",
+       " <Metabolite pe_MC_c at 0x113fb6a20>: -9.134262e-05,\n",
+       " <Metabolite pep_c at 0x113fb6ac8>: -0.005,\n",
+       " <Metabolite peptido_MC_c at 0x113fb6a90>: -0.053,\n",
+       " <Metabolite pg_MC_c at 0x113fb6da0>: -1.538077e-05,\n",
+       " <Metabolite phe__L_c at 0x113fc0160>: -0.185,\n",
+       " <Metabolite pheme_c at 0x113fc03c8>: -0.00022,\n",
+       " <Metabolite pro__L_c at 0x113fe07f0>: -0.248,\n",
+       " <Metabolite ptdca_c at 0x113fe9a58>: -0.00023422,\n",
+       " <Metabolite pyr_c at 0x113ff39b0>: -0.015,\n",
+       " <Metabolite q8h2_im at 0x113ff9400>: -0.00022,\n",
+       " <Metabolite ribflv_c at 0x113f840b8>: -0.00019396,\n",
+       " <Metabolite ru5p_D_c at 0x113f843c8>: -0.001,\n",
+       " <Metabolite ser__L_c at 0x113feddd8>: -0.246,\n",
+       " <Metabolite sql_c at 0x1140173c8>: -0.01339118,\n",
+       " <Metabolite succ_c at 0x114017908>: -0.002,\n",
+       " <Metabolite thmpp_c at 0x113fde208>: -2.865e-05,\n",
+       " <Metabolite thr__L_c at 0x113fde1d0>: -0.271,\n",
+       " <Metabolite trp__L_c at 0x114042128>: -0.093,\n",
+       " <Metabolite ttdca_c at 0x114042e80>: -0.0014565,\n",
+       " <Metabolite ttdcea_c at 0x114042c50>: -0.00017921,\n",
+       " <Metabolite tyr__L_c at 0x11404c198>: -0.132,\n",
+       " <Metabolite utp_c at 0x11405ee10>: -0.02560771,\n",
+       " <Metabolite val__L_c at 0x11405eb00>: -0.36,\n",
+       " <Metabolite zn2_c at 0x11406c6d8>: -0.001,\n",
+       " <Metabolite adp_c at 0x113dfcb70>: 23.08742079,\n",
+       " <Metabolite h_c at 0x113f2a898>: 23.08742079,\n",
+       " <Metabolite pi_c at 0x113fc9a90>: 22.88736056,\n",
+       " <Metabolite ppi_c at 0x113fbeba8>: 0.18282505}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mcaps.reactions.BIOMASS_Mcapsulatus.metabolites"
    ]
   },
   {
